--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,11 +4,11 @@
 }
 
 .nav-item {
-    color: white;
+    color: #eeecf9;
 }
 
 .nav-link {
-    color: white !important;
+    color: #eeecf9 !important;
 }
 
 .nav-item:hover {
