--- a/src/components/Singers.css
+++ b/src/components/Singers.css
@@ -24,7 +24,7 @@
   body {
     user-select: none;
     font-family: 'Arial', sans-serif;
-    background-color: #f5e6ff; 
+    background-color: #e7e6ff; 
     margin: 0;
     padding: 0;
   }
