--- a/src/components/Features.css
+++ b/src/components/Features.css
@@ -8,7 +8,7 @@
   
  
   .apexcharts-xaxis-label {
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: #e7e6ff;
     padding: 2px 6px; 
     border-radius: 4px; 
   }
