--- a/src/components/Songs.css
+++ b/src/components/Songs.css
@@ -1,10 +1,11 @@
-.App {
-  text-align: center;
+body {
+  user-select: none;
   font-family: 'Arial', sans-serif;
-  background: #f0f4f8;
-  display: flex;
-  padding: 20px;
+  background-color: #e7e6ff; 
+  margin: 0;
+  padding: 0;
 }
+
 
 .histogram {
   display: flex;
